@@ -284,7 +284,11 @@ int xioopen_ipapp_listen(int argc, const char *argv[], struct opt *opts,
 
    if (pf == PF_UNSPEC) {
 #if WITH_IP4 && WITH_IP6
-      pf = xioparms.default_ip=='6'?PF_INET6:PF_INET;
+      switch (xioparms.default_ip) {
+      case '4': pf = PF_INET; break;
+      case '6': pf = PF_INET6; break;
+      default: break;		/* includes \0 */
+      }
 #elif WITH_IP6
       pf = PF_INET6;
 #else
