@@ -71,17 +71,25 @@ int xioinitialize(void) {
 
    {
       const char *default_ip;
+
+      // xioparms.default_ip = WITH_DEFAULT_IPV;
       default_ip = getenv("SOCAT_DEFAULT_LISTEN_IP");
       if (default_ip != NULL) {
 	 switch (default_ip[0]) {
 	 case '4':
 	 case '6':
-	    xioparms.default_ip = default_ip[0]; break;
+	    xioparms.default_ip = default_ip[0];
+	    break;
+	 default:
+	    xioparms.default_ip = '0';
+	    break;
 	 }
       }
    }
    {
       const char *preferred_ip;
+
+      // xioparms.preferred_ip = WITH_DEFAULT_IPV;
       preferred_ip = getenv("SOCAT_PREFERRED_RESOLVE_IP");
       if (preferred_ip != NULL) {
 	 switch (preferred_ip[0]) {
